Update v0.7: first update in 3 years :skull:
- Patched internal stuff
- Removed Herobrine

Note: This release DOES NOT feature friending yet! This is just an update before that is released in version [REDACTED].

Credits:
@Bkerboy - Development