@@ -1,5 +1,5 @@
 {
-    "MessageOfTheDay": ":3",
+    "MessageOfTheDay": "If you are reading this, you are gay.",
     "CdnBaseUri": "http://localhost:20182/",
     "LevelProgressionMaps": [
         {
