@@ -1,1 +1,1 @@
-:3
+If you are reading this, you are gay.
